--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 </head>
  <body>
 <div id = "app">
-  <div class ="holder headline">
+  <div id="headline" class ="holder">
     Weather Journal App
   </div>
   <div class ="holder zip">
